feat: add search form

--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -7,6 +7,14 @@
     <title>Belarusian Filmmakers</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="asking">
+            <form action="" method="post" class="search">
+                <input type="search" name="" placeholder="поиск" class="input">
+                <input type="submit" name="" value="" class="search">
+            </form>
+        </div>
+        <div class="answer"></div>
+    </div>
 </body>
 </html>
