--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -11,7 +11,7 @@
         <div class="asking">
             <form action="" method="post" class="search">
                 <input type="search" name="" placeholder="поиск" class="input">
-                <input type="submit" name="" value="" class="search">
+                <input type="submit" name="" value="GO!" class="search">
             </form>
         </div>
         <div class="answer"></div>
