--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -9,12 +9,15 @@
 <body>
     <div class="wrapper">
         <div class="asking">
-            <form action="" method="post" class="search">
+            <form action="" method="get" class="search">
                 <input type="search" name="" placeholder="поиск" class="input">
                 <input type="submit" name="" value="GO!" class="search">
             </form>
         </div>
-        <div class="answer"></div>
+        <div class="answer">
+            <ul></ul>
+        </div>
     </div>
+    <script src="./search.js"></script>
 </body>
 </html>
