add search button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <ul>
             <li><a href="#" class="home-button">Home</a></li>
             <li><a href="#" class="filmmakers-button">Filmmakers</a></li>
+            <li><a href="#" class="search-button">Search</a></li>
             <li><a href="#" class="language-button">Language</a>
                 <ul class="submenu">
                     <li id="eng">eng</li>
