--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <article id="filmmaker">
             <div class="filmmaker-main">
                 <div class="filmmaker-info">
-                    <div id="filmmaker-name">Elon Musk</div>    
+                    <div class="filmmaker-name">Elon Musk</div>    
                     <p>I THINK THAT THIS BLOCK SHOULD TAKE INFO FROM filmmakerS JSON!!! <br>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium autem numquam iure officiis delectus veritatis quos fugiat a ab.</p>    
                 </div>
@@ -70,35 +70,35 @@
                     <img class="avatar" src="https://avatars1.githubusercontent.com/u/26404831" alt="metre-ray">
                 </a>
             </article>
-            <i class="cross"></i>
+            <div class="cross"></div>
             <article class="team-block">
                 <p class="nickname">garnich</p>
                 <a class="github-link" href="https://github.com/garnich" target="_blank">
                     <img class="avatar" src="https://avatars0.githubusercontent.com/u/33061150" alt="garnich">
                 </a>
             </article>
-            <i class="cross"></i>
+            <div class="cross"></div>
             <article class="team-block">
                 <p class="nickname">hellsingi</p>
                 <a class="github-link" href="https://github.com/hellsingi" target="_blank">
                     <img class="avatar" src="https://avatars0.githubusercontent.com/u/43145895" alt="hellsingi">
                 </a>
             </article>
-            <i class="cross"></i>         
+            <div class="cross"></div>         
             <article class="team-block">
                 <p class="nickname">nikky</p>
                 <a class="github-link" href="https://github.com/exedystyle" target="_blank">
                     <img class="avatar" src="https://avatars3.githubusercontent.com/u/38404047" alt="nikky">
                 </a>
             </article>
-            <i class="cross"></i>       
+            <div class="cross"></div>       
             <article class="team-block">
                 <p class="nickname">nastyalo</p>
                 <a class="github-link" href="https://github.com/nastyalo" target="_blank">
                     <img class="avatar" src="https://avatars0.githubusercontent.com/u/32715171" alt="nastyalo">
                 </a>
             </article>
-            <i class="cross"></i>        
+            <div class="cross"></div>        
             <article class="team-block">
                 <p class="nickname">aliaksandrposakh</p>
                 <a class="github-link" href="https://github.com/aliaksandrposakh" target="_blank">
