feat:add multulanguage plaseholder & button value

--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -9,8 +9,8 @@
 <body>
     <div class="wrapper">
         <div class="asking">
-            <input type="search" name="" placeholder="поиск" class="input">
-            <input type="submit" name="" value="GO!" class="search">
+            <input type="search" name="" placeholder='поиск' class="input">
+            <input type="submit" name="" value="ПОИСК!" class="search">
         </div>
         <div class="answer">
             <ul></ul>
