--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 <footer>
 <div class="container">
         <div class="logo">Team35</div>
+        <div class="footer-text">
+            <p>All rights are right. All lefts are left.</p>
+        </div>
+        <div >
+            <img class="rss-logo" src="https://rollingscopes.com/images/logo_rs_text.svg" alt="RSS">
+        </div>
 </div>
 </footer>
 </body>
